# SpecKit

./: README.md  _config.py  analyzer.py  aux.py  dsp.py  flattop.py  linalg.py  lpsd.py  ltf.py  pyproject.toml  readme.md  requirements.txt  schedulers.py  utils.py
benchmarks/: benchmark_cuda_scaling.py  benchmark_cuda_speedup.py  benchmark_ltpda_lpsd_linear_detrend.m  benchmark_speckit_lpsd_linear_detrending.py
examples/: example.py  profile_speckit.py
notebooks/: 0.0_example.ipynb  0.0_quickstart.ipynb  0.1_pyhexagon-pypm.ipynb  0.1_time-delay-bias-error.ipynb  0.2_cross-spectrum.ipynb  0.3_compute-times.ipynb  0.4_noise.ipynb  0.4_usage.ipynb  0.5_errors.ipynb  0.6_schedulers.ipynb  0.7_windows.ipynb  0.8_multi-file-processing.ipynb  0.9_conditioned-spectrum.ipynb  1.0_optimal-linear-combination.ipynb  1.0_systems.ipynb  1.1_optimal-linear-combination.ipynb  1.1_polynomial-detrend.ipynb  1.3_new-ltf.ipynb  1.3_vectorized-ltf.ipynb  2.0_cuda-acceleration.ipynb
speckit/: __init__.py  _config.py  analysis.py  analyzer.py  core.py  core_cuda.py  dsp.py  flattop.py  lpsd.py  ltf.py  noise.py  plotting.py  schedulers.py  schedulers_dev.py  systems.py  utils.py
tests/: conftest.py
tests/integration/: test_accuracy.py  test_analysis_api.py  test_cuda_integration.py  test_errors.py
tests/unit/: test_core_cuda.py  test_dsp.py  test_noise.py  test_schedulers.py  test_utils.py
